[package]
name = "ctvlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.31.1", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.57"

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.114"
